clusters/main/kubernetes/system/networkpolicies/app/gatus-allow-egress-web.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-egress-web
  namespace: gatus
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: gatus
      app.kubernetes.io/name: gatus
  egress:
    - toCIDRSet:
        - cidr: 0.0.0.0/0
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
            - port: "443"
              protocol: TCP
            - port: "4443"
              protocol: TCP
